# smxvideo

./: CMakeLists.txt  README.md
src/: main.c
src/smx-adapter/: smx-adapter.cpp  smx-adapter.h
